--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ fancy. Let me know if you run into any issues and if it works on other versions 
 </ul>
 
 <h2>
+<a id="video-guide" class="anchor" href="#video-guide" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Video Guide</h2>
+
+<p><img src="http://www.csprance.com/shots/2016-05-09_23-14-51a6ce51b8-e066-4c36-a16d-ab4189e182d5.png" alt="Click For Video"></p>
+
+<h2>
 <a id="whats-going-on" class="anchor" href="#whats-going-on" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Whats going on</h2>
 
 <p>The actual command being fired is either <code>Explosivo.toggle</code> or <code>Explosivo.toggle other_morph_to_toggle</code> firing this
